# cpp-component-util-singleton

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  biicode.conf
include/fw/util/: multiton_mixin.h  singleton_mixin.h
src/: main.cc
test/fw/util/: multiton_mixin_test.cc  singleton_mixin_test.cc
