# CMakeLists.yml
#
#          Copyright Florian Wolters 2014.
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_1_0.txt or copy at
#          http://www.boost.org/LICENSE_1_0.txt)

project(cpp-component-util-singleton)

cmake_minimum_required(VERSION 2.8.12)

add_executable(main src/main.cc)

enable_testing()
